--- a/proyecto_cdvjoven/public/stylesheets/styles.css
+++ b/proyecto_cdvjoven/public/stylesheets/styles.css
@@ -47,6 +47,7 @@ h2 {
 
 .card-body {
   padding: 1rem;
+  min-height: 200px; /* Ajustá este número según lo que veas en pantalla */
 }
 
 .service {
@@ -72,6 +73,13 @@ h5 {
   object-fit: cover;
 }
 
+.fix-escuela {
+  min-height: 200px;
+  object-fit: cover;
+  width: 100%;
+  display: block;
+}
+
 .map iframe {
   width: 100%;
   aspect-ratio: 1.2;
@@ -94,6 +102,7 @@ h5 {
 .scroll-section {
   scroll-margin-top: 100px;
 }
+
 
 @keyframes pulse {
   0% { background-color: rgba(255, 0, 0, 0.5); }
